--- a/apps/image-editor/src/css/range.styl
+++ b/apps/image-editor/src/css/range.styl
@@ -28,10 +28,10 @@
     .{prefix}-virtual-range-pointer
         position: absolute;
         cursor: pointer;
-        top: -5px;
+        top: -9px;
         left: 0;
-        width: 12px;
-        height: 12px;
+        width: 20px;
+        height: 20px;
         background-color: #fff;
         border-radius: 100%;
     .{prefix}-range-wrap
@@ -76,6 +76,12 @@
         font-family: 'Noto Sans', sans-serif;
         margin-top: 15px;
         margin-left: 4px;
+
+        /* Force disabled input */
+        border: none !important;
+        background-color: inherit !important;
+        pointer-events: none !important;
+
     .{prefix}-controls
         position: absolute;
         background-color: #151515;
